Add the current events to the caregiver view
